# 2026-Internship

./: 7.11.md  7.12.md  API.md  AdminPage.qml  ApiClient.cpp  ApiClient.h  CMakeLists.txt  Cargo.toml  LoginPage.qml  Main.qml  Toast.qml  UserPage.qml  ast.cpp  ast.h  main.cpp  widget.cpp  widget.h  widget.ui
i18n/: LibraryManager_en.ts  LibraryManager_zh.ts
pages/admin/: AdminBooksPage.qml  AdminBorrowPage.qml  AdminProfilePage.qml  AdminRecordsPage.qml  AdminRenewalsPage.qml  AdminReturnPage.qml  AdminUsersPage.qml
pages/user/: UserBooksPage.qml  UserBorrowsPage.qml  UserProfilePage.qml  UserRenewalsPage.qml
src/: api.rs  config.rs  database.rs  main.rs  types.rs
