[package]
name = "LibraryBackend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
argon2 = { version = "0.5.3", features = ["password-hash", "std"] }
axum = { version = "0.8.9", features = ["macros"] }
jiff = "0.2.32"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
toasty = { version = "0.8.0", features = ["jiff", "postgresql", "serde", "sqlite"] }
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.3"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uuid = { version = "1.23.5", features = ["v7"] }
